tests/parse_error_node/parse_error_node.exp
Error ------------------------------------------------------- ParseError.js:3:18

Error: ParseError.js:3
  3: function foo() { ### // invalid token
                      ^ Unexpected token #


Found 1 error
